--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "devDependencies": {
     "browserchannel": "1.0.x",
     "chai": "1.7.x",
-    "engine.io": "git://github.com/3rd-Eden/engine.io.git#issue/178",
-    "engine.io-client": "0.6.x",
+    "engine.io": "0.9.0",
+    "engine.io-client": "0.9.0",
     "jsonh": "0.0.x",
     "mocha": "1.11.x",
     "pre-commit": "0.0.x",
